--- a/index.html
+++ b/index.html
@@ -5,12 +5,182 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Single Product Page</title>
     <!-- css -->
-    <link rel="stylesheet" href="css/styles.css">
+    <!-- <link rel="stylesheet" href="css/styles.css"> -->
+
+    <style>
+        * {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+body {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 0 30px;
+}
+
+header {
+  margin-bottom: 20px;
+}
+
+.product-container {
+  display: flex;
+  justify-content: start;
+  align-items: start;
+  gap: 40px;
+}
+
+/* .img-card{
+    width: 40%;
+} */
+
+.img-card img {
+  width: 100%;
+  flex-shrink: 0;
+  border-radius: 4px;
+  height: 520px;
+  object-fit: cover;
+}
+
+.small-Card {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  margin-top: 15px;
+  gap: 12px;
+}
+
+.small-Card img {
+  width: 104px;
+  height: 104px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.small-Card img:active {
+  border: 1px solid #17696a;
+}
+
+.sm-card {
+  border: 2px solid darkred;
+}
+
+.product-info{
+  width: 60%;
+}
+.product-info h3 {
+  font-size: 32px;
+  font-family: Lato;
+  font-weight: 600;
+  line-height: 130%;
+}
+
+.product-info h5 {
+  font-size: 24px;
+  font-family: Lato;
+  font-weight: 500;
+  line-height: 130%;
+  color: #ff4242;
+  margin: 6px 0;
+}
+
+.product-info del {
+  color: #a9a9a9;
+}
+
+.product-info p {
+  color: #424551;
+  margin: 15px 0;
+  width: 70%;
+}
+
+.sizes p {
+  font-size: 22px;
+  color: black;
+}
+
+.size-option {
+  width: 200px;
+  height: 30px;
+  margin-bottom: 15px;
+  padding: 5px;
+}
+
+.quantity input {
+  width: 51px;
+  height: 33px;
+  margin-bottom: 15px;
+  padding: 6px;
+}
+
+button {
+  background: #17696a;
+  border-radius: 4px;
+  padding: 10px 37px;
+  border: none;
+  color: white;
+  font-weight: 600;
+}
+
+button:hover {
+  background: #ff4242;
+  transition: ease-in 0.4s;
+}
+
+.delivery {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 70%;
+  color: #787a80;
+  font-size: 12px;
+  font-family: Lato;
+  line-height: 150%;
+  letter-spacing: 1px;
+}
+
+hr {
+  color: #787a80;
+  width: 58%;
+  opacity: 0.67;
+}
+
+.pagination {
+    color: #787a80;
+    margin: 15px 0;
+    cursor: pointer;
+}
+
+@media screen and (max-width: 576px) {
+  .product-container{
+    flex-direction: column;
+  }
+  .small-Card img{
+    width: 80px;
+  }
+  .product-info{
+    width: 100%;
+  }
+  /* echo "# product-details-page-html-css-js" >> README.md */
+  .product-info p{
+    width: 100%;
+  }
+
+  .delivery{
+    width: 100%;
+  }
+
+  hr{
+    width: 100%;
+  }
+}
+    </style>
 </head>
 <body>
-    <div class="pagination">
+
+    <!-- <div class="pagination">
         <p>Home > Shop > Women > Jacket </p>
-    </div>
+    </div> -->
     <!-- product section -->
     <section class="product-container">
         <!-- left side -->
@@ -26,11 +196,13 @@
         </div>
         <!-- Right side -->
         <div class="product-info">
-            <h3>LEVI'S® WOMEN'S XL TRUCKER JACKET</h3>
-            <h5>Price: $140 <del>$170</del></h5>
+            <h3>Name : product Name</h3>
+            <!-- <h5>Price: $140 <del>$170</del></h5> -->
+            <h5>Price: Product Price <del></del></h5>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa accusantium, aspernatur provident beatae corporis veniam atque facilis, consequuntur assumenda, vitae dignissimos iste exercitationem dolor eveniet alias eos ullam nesciunt voluptatum.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore accusamus natus dolorum. Quaerat nulla quod doloremque, officia quis provident amet adipisci unde esse iure delectus, maxime inventore optio fuga nisi?</p>
 
+            <!-- Product sizes -->
             <div class="sizes">
                 <p>Size:</p>
                 <select name="Size" id="size" class="size-option">
@@ -75,6 +247,54 @@
     </section>
 
     <!-- script tags -->
-    <script src="js/cart.js"></script>
+    <!-- <script src="js/cart.js"></script> -->
+
+    <script>
+        let featuedImg = document.getElementById('featured-image');
+let smallImgs = document.getElementsByClassName('small-Img');
+
+smallImgs[0].addEventListener('click', () => {
+    featuedImg.src = smallImgs[0].src;
+    smallImgs[0].classList.add('sm-card')
+    smallImgs[1].classList.remove('sm-card')
+    smallImgs[2].classList.remove('sm-card')
+    smallImgs[3].classList.remove('sm-card')
+    smallImgs[4].classList.remove('sm-card')
+})
+smallImgs[1].addEventListener('click', () => {
+    featuedImg.src = smallImgs[1].src;
+    smallImgs[0].classList.remove('sm-card')
+    smallImgs[1].classList.add('sm-card')
+    smallImgs[2].classList.remove('sm-card')
+    smallImgs[3].classList.remove('sm-card')
+    smallImgs[4].classList.remove('sm-card')
+})
+smallImgs[2].addEventListener('click', () => {
+    featuedImg.src = smallImgs[2].src;
+    smallImgs[0].classList.remove('sm-card')
+    smallImgs[1].classList.remove('sm-card')
+    smallImgs[2].classList.add('sm-card')
+    smallImgs[3].classList.remove('sm-card')
+    smallImgs[4].classList.remove('sm-card')
+})
+smallImgs[3].addEventListener('click', () => {
+    featuedImg.src = smallImgs[3].src;
+    smallImgs[0].classList.remove('sm-card')
+    smallImgs[1].classList.remove('sm-card')
+    smallImgs[2].classList.remove('sm-card')
+    smallImgs[3].classList.add('sm-card')
+    smallImgs[4].classList.remove('sm-card')
+})
+smallImgs[4].addEventListener('click', () => {
+    featuedImg.src = smallImgs[4].src;
+    smallImgs[0].classList.remove('sm-card')
+    smallImgs[1].classList.remove('sm-card')
+    smallImgs[2].classList.remove('sm-card')
+    smallImgs[3].classList.remove('sm-card')
+    smallImgs[4].classList.add('sm-card')
+})
+
+
+    </script>
 </body>
 </html>
